welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  faireCote(Color.YELLOW);
}

def faireV(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse()
	leveBrosse()
  avance();gauche();avance()
  baisseBrosse();leveBrosse()
  recule();droite();avance()
  baisseBrosse();leveBrosse()	
  recule();recule()
}


def faireCote(c:Color) {
    avance();avance()
    faireV(c)
    avance();avance();avance();avance()
    gauche()
}



def faireEtage() {
  for (i<-1 to 3){
    faireMotif
    for(j<-1 to 7){
      avance()     
    }
  }
  for (k<- 1 to 21){
    recule()
  }
  gauche()
  for (l<-1 to 7){
    avance()
  }
  droite()
}
